--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
     </head>
 <body>
     <div class="container-fluid">
-        <!--<header style="background-color:yellow;" class="col-md-12">
+        <!--<header class="col-md-12">
         </header>-->
 
-        <div style="background-color:black; height:80vh;" class="col-md-9">
-            <canvas id="renderCanvas">
-
-            </canvas>
+        <div class="col-md-9">
+            <canvas id="renderCanvas"></canvas>
+            <span class="label" id="fpsLabel"></span>
         </div>
 
-        <aside style="background-color:green;" class="col-md-3">
+        <aside class="col-md-3">
         </aside>
 
-        <!--<footer style="background-color:blue;" class="col-md-12">
+        <!--<footer class="col-md-12">
         </footer>-->
     </div>
 </body>
