--- a/index.html
+++ b/index.html
@@ -8,30 +8,61 @@
         <script src="./js/babylon/cannon.js"></script>
         <script src="./js/babylon/Oimo.js"></script>
         <script src="./js/babylon/babylon.2.0.js"></script>
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/script.js"></script>
-        
+    
         <!--css-->
-        <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./bootstrap-3.3.2-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./bootstrap-3.3.2-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 <body>
+    <nav>
+        <ul class="nav nav-pills">
+            <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                  Fichier <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Nouveau</a></li>
+                  <li><a href="#">Ouvrir</a></li>
+                  <li><a href="#">Enregistrer</a></li>
+                  <li><a href="#">Enregistrer sous</a></li>
+                </ul>
+            </li>
+            <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                  Edition <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">Annuler</a></li>
+                  <li><a href="#">Retablir</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">Couper</a></li>
+                  <li><a href="#">Copier</a></li>
+                  <li><a href="#">Coller</a></li>
+                  <li><a href="#">Supprimer</a></li>
+                </ul>
+            </li>
+            <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                  ? <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">A propos</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <div class="container-fluid">
-        <!--<header style="background-color:yellow;" class="col-md-12">
-        </header>-->
-
-        <div style="background-color:black; height:80vh;" class="col-md-9">
+        <section class="col-md-10">
             <canvas id="renderCanvas">
-
             </canvas>
-        </div>
-
-        <aside style="background-color:green;" class="col-md-3">
+        </section>
+        <aside class="col-md-2">
+            <button>Test</button>
         </aside>
-
-        <!--<footer style="background-color:blue;" class="col-md-12">
-        </footer>-->
     </div>
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
+
