--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
         <div class="col-md-9">
             <canvas id="renderCanvas"></canvas>
-            <span class="label" id="fpsLabel"></span>
         </div>
 
         <aside class="col-md-3">
+            <span class="label" id="fpsLabel"></span>
+            <span class="label" id="camLabel"></span>
         </aside>
 
         <!--<footer class="col-md-12">
