Creation et gestion de sphere
tout est dit, un petit bout de css ambiance darky

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                   <li><a href="#">A propos</a></li>
                 </ul>
             </li>
+            <a class="btn" id="fullscreenButton">Fullscreen</a>
         </ul>
     </nav>
     <div class="container-fluid">
@@ -57,7 +58,14 @@
             </canvas>
         </section>
         <aside class="col-md-2">
-            <button>Test</button>
+            <button id="sphere">Ajouter sphere</button>
+            <input type="text" value="Objet" id="name" />Nom
+            <input type="number" placeholder="1" id="taillex" />Taille x
+            <input type="number" placeholder="1" id="tailley" />Taille y
+            <input type="number" placeholder="1" id="taillez" />Taille z
+            <input type="number" placeholder="0" id="posy" />Pos Y
+            <input type="number" placeholder="0" id="posx" />Pos X
+            <input type="number" placeholder="0" id="posz" />Pos Z
         </aside>
     </div>
     <script src="js/jquery-2.1.3.min.js"></script>
