meshtab, meshs on click, babylon.debug, shadows

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Babylon.js -->
         <script src="./js/babylon/cannon.js"></script>
         <script src="./js/babylon/Oimo.js"></script>
-        <script src="./js/babylon/babylon.2.0.js"></script>
+        <script src="./js/babylon/babylon.2.0.debug.js"></script>
         <!--Favicon-->
         <link rel="icon" href="img/favicon.ico">
         <!--css-->
@@ -68,13 +68,13 @@
               </button>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                  <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
-                  <select name="cars" class="nav-justified">
+                  <select class="nav-justified" id="mesh-type">
                     <option value="box">Cube</option>
                     <option value="sphere">Sphere</option>
                     <option value="cylinder">Cylindre</option>
                     <option value="pyramid">Pyramide</option>
                   </select>
+                  <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
                 </div>
               </div>
             </div>
