--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <title>Nail JS</title>
-        <!-- Babylon.js -->
-        <script src="./js/babylon/cannon.js"></script>
-        <script src="./js/babylon/Oimo.js"></script>
-        <script src="./js/babylon/babylon.2.0.debug.js"></script>
         <!--Favicon-->
         <link rel="icon" href="img/favicon.ico">
         <!--css-->
@@ -84,12 +80,12 @@
           <ul class="nav nav-tabs espace">
             <li role="presentation"><input type="text" value="Objet" id="name" /><p>Nom</p></li>
             <li role="presentation"><input type="checkbox" id="check"><p>X = Y = Z</p></li>
-            <li role="presentation"><input type="number" placeholder="1" id="taillex" /><p>Taille x</p></li>
-            <li role="presentation"><input type="number" placeholder="1" id="tailley" class="hiden"/><p class="hiden">Taille y</p></li>
-            <li role="presentation"><input type="number" placeholder="1" id="taillez" class="hiden"/><p class="hiden">Taille z</p></li>
-            <li role="presentation"><input type="number" placeholder="0" id="posy" /><p>Pos Y</p></li>
-            <li role="presentation"><input type="number" placeholder="0" id="posx" /><p>Pos X</p></li>
-            <li role="presentation"><input type="number" placeholder="0" id="posz" /><p>Pos Z</p></li>
+            <li role="presentation"><input type="number" value="1" id="taillex" /><p>Taille x</p></li>
+            <li role="presentation"><input type="number" value="1" id="tailley" class="hiden"/><p class="hiden">Taille y</p></li>
+            <li role="presentation"><input type="number" value="1" id="taillez" class="hiden"/><p class="hiden">Taille z</p></li>
+            <li role="presentation"><input type="number" value="0" id="posy" /><p>Pos Y</p></li>
+            <li role="presentation"><input type="number" value="0" id="posx" /><p>Pos X</p></li>
+            <li role="presentation"><input type="number" value="0" id="posz" /><p>Pos Z</p></li>
             <li role="presentation"><input type="color" id="color" /><p>Couleur</p>
           </ul>
         </footer>
@@ -98,6 +94,10 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- Babylon.js -->
+    <script src="./js/babylon/cannon.js"></script>
+    <script src="./js/babylon/Oimo.js"></script>
+    <script src="./js/babylon/babylon.2.0.debug.js"></script>
 </body>
 </html>
 
