--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <li role="presentation"><input type="number" value="0" id="posy" /><p>Pos Y</p></li>
             <li role="presentation"><input type="number" value="0" id="posx" /><p>Pos X</p></li>
             <li role="presentation"><input type="number" value="0" id="posz" /><p>Pos Z</p></li>
+            <li role="presentation"><input type="number" value="0.0" id="roty" /><p>Rotation Y</p></li>
+            <li role="presentation"><input type="number" value="0.0" id="rotx" /><p>Rotation X</p></li>
+            <li role="presentation"><input type="number" value="0.0" id="rotz" /><p>Rotation Z</p></li>
             <li role="presentation"><input type="color" id="color" /><p>Couleur</p>
           </ul>
         </footer>
