--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="#">Nouveau</a></li>
                   <li><a href="#">Ouvrir</a></li>
-                  <li><a href="#">Enregistrer</a></li>
+                  <li><a id="save">Enregistrer</a></li>
                   <li><a href="#">Enregistrer sous</a></li>
                 </ul>
             </li>
