--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                     <option value="pyramid">Pyramide</option>
                   </select>
                   <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
+                  <button class="nav-justified btn btn-danger" id="btn_sup">Supprimer</button>
+                  <div id="objets"></div>
                 </div>
               </div>
             </div>
