--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <li role="presentation"><input type="number" value="0.0" id="rotz" class="ungrp"/><p class="ungrp">Rotation Z</p></li>
             <li role="presentation"><input type="color" id="color" value="#eeeeee" class="ungrp"/><p class="ungrp">Couleur</p>
             <li role="presentation"><input type="text" value="Groupe" id="grp_name" class="grp"/><p class="grp">Nom du groupe</p></li>
-            <li role="presentation"><input type="number" value="0" id="grp_posy" class="grp"/><p class="grp">Pos Y</p></li>
-            <li role="presentation"><input type="number" value="0" id="grp_posx" class="grp"/><p class="grp">Pos X</p></li>
-            <li role="presentation"><input type="number" value="0" id="grp_posz" class="grp"/><p class="grp">Pos Z</p></li>
+            <li role="presentation" class="grp"><div class="btn-group"><button class="btn btn-xs" id="btnmoinsx">-</button><button class="btn btn-xs" id="btnplusx">+</button></div>Pos x</li>
+            <li role="presentation" class="grp"><div class="btn-group"><button class="btn btn-xs" id="btnmoinsy">-</button><button class="btn btn-xs" id="btnplusy">+</button></div>Pos y</li>
+            <li role="presentation" class="grp"><div class="btn-group"><button class="btn btn-xs" id="btnmoinsz">-</button><button class="btn btn-xs" id="btnplusz">+</button></div>Pos z</li>
           </ul>
         </footer>
     </div>
