--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   <button class="btn btn-violet2 nav-justified" id="btn_ok">OK</button>
                   <div id="objets" data-toggle="buttons"></div>
                 </div>
+              </div>
             </div>
             <div class="panel panel-default">
               <button type="button" class="nav-justified btn btn-primary collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo">
