--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
                   <button class="nav-justified btn btn-danger" id="btn_sup">Supprimer</button>
                   <button class="btn btn-violet nav-justified" id="btn_grp">Grouper</button>
-                  <button class="btn btn-violet2 nav-justified" id="btn_ok">OK</button>
+                  <button class="btn btn-violet2 nav-justified" id="btn_ok_grp">OK</button>
                   <div id="objets" data-toggle="buttons"></div>
                 </div>
               </div>
