--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                     </li>
-                    <li><a data-toggle="modal" data-target="#modalSave">Enregistrer sous</a></li>
+                    <li><a id="saveLink" href="#" target="_blank">Enregistrer sous</a></li>
                 </ul>
             </li>
             <li role="presentation" class="dropdown">
@@ -83,6 +83,9 @@
                                 <option value="sphere">Sphere</option>
                                 <option value="cylinder">Cylindre</option>
                                 <option value="pyramid">Pyramide</option>
+                                <option value="line">Ligne</option>
+                                <option value="plane">Rectangle</option>
+                                <option value="circle">Cercle</option>
                             </select>
                             <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
                             <button class="nav-justified btn btn-danger" id="btn_sup">Supprimer</button>
@@ -166,39 +169,16 @@
         </footer>
     </div>
 
-    <!-- Modal Save-->
-    <form class="modal fade" id="modalSave" tabindex="-1" role="dialog" aria-labelledby="modalSave" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Enregistrer sous</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="fileNameInput" placeholder="World">
-                        <div class="input-group-addon">.nail</div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="reset" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                    <button id="save" type="submit" class="btn btn-primary">Enregistrer</button>
-                </div>
-            </div>
-        </div>
-    </form>
-
     <!-- Babylon.js -->
-    <script src="./js/babylon/cannon.js"></script>
-    <script src="./js/babylon/Oimo.js"></script>
-    <script src="./js/babylon/babylon.2.0.debug.js"></script>
+    <script src="http://www.babylonjs.com/cannon.js"></script>
+    <script src="http://www.babylonjs.com/Oimo.js"></script>
+    <script src="http://www.babylonjs.com/babylon.js"></script>
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/actions.js"></script>
+    <script src="js/objets.js"></script>
 
 </body>
 
