--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
               <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
                   <button class="btn btn-info nav-justified" id="zone_add">Ajouter</button>
+                  <button class="btn btn-danger nav-justified" id="zone_sup">Supprimer</button>
                 </div>
               </div>
             </div>
@@ -207,8 +208,10 @@
 
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/zones.js"></script>
     <script src="js/script.js"></script>
     <script src="js/actions.js"></script>
+
 
 </body>
 
