--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                   <div class="panel-body">
                     <button class="btn btn-info nav-justified" id="zone_add">Ajouter</button>
                     <button class="btn btn-danger nav-justified" id="zone_sup">Supprimer</button>
+                    <div id="zones" data-toggle="buttons">
+                      <label id="0" onclick="zoneCharge(parseInt(this.id))" class="btn btn-success nav-justified"><input type="radio">zone 0</label>
+                    </div>
                   </div>
               </div>
             </div>
